--- a/TwsPluginHost/res/layout/item_separate_line.xml
+++ b/TwsPluginHost/res/layout/item_separate_line.xml
@@ -8,6 +8,6 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginLeft="20dp"
-        android:background="#0dffffff" />
+        android:background="@color/tws_stipple" />
 
 </FrameLayout>
