--- a/TwsPluginHost/res/drawable/dm_common_single_item_selector.xml
+++ b/TwsPluginHost/res/drawable/dm_common_single_item_selector.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
 
-	<item android:state_focused="true"  android:drawable="@color/dm_common_single_item_focused" />
-	<item android:state_pressed="true"  android:drawable="@color/dm_common_single_item_focused" />	
-	<item android:drawable="@color/dm_common_item_normal"></item>
+	<item android:state_focused="true"  android:drawable="@color/tws_stipple" />
+	<item android:state_pressed="true"  android:drawable="@color/tws_stipple" />	
+	<!-- normal -->
+	<item android:drawable="@color/tws_white"></item>
 	
 </selector>
