--- a/TwsPluginShareLib/res/layout-v4/preference_information_holo.xml
+++ b/TwsPluginShareLib/res/layout-v4/preference_information_holo.xml
@@ -62,6 +62,7 @@
             android:layout_alignLeft="@id/title"
 			android:paddingTop="6dip"
             android:textAppearance="@style/TextAppearance.tws.Second.twstextMicroLightSummary"
+			android:textColor="@color/tws_black_alpha_medium"
             android:maxLines="2" />
 
     </RelativeLayout>
