--- a/TwsPluginShareLib/res/layout-v4/preference_list_fragment.xml
+++ b/TwsPluginShareLib/res/layout-v4/preference_list_fragment.xml
@@ -37,6 +37,7 @@
         android:clipToPadding="false"
         android:drawSelectorOnTop="true"
         android:scrollbarAlwaysDrawVerticalTrack="true"
+        android:divider="@null"
         android:cacheColorHint="@null"
         style="@style/Widget.PreferenceListView"/>
 
