--- a/TwsPluginShareLib/res/layout-v4/select_dialog_singlechoice.xml
+++ b/TwsPluginShareLib/res/layout-v4/select_dialog_singlechoice.xml
@@ -22,7 +22,7 @@
     android:layout_height="wrap_content"
     android:minHeight="@dimen/tws_listview_item_height"
     style="?android:attr/textAppearanceMedium"
-	android:textColor="@color/tws_white"
+	android:textColor="?android:attr/textColorAlertDialogListItem"
     android:gravity="center_vertical"
     android:paddingLeft="18dip"
     android:paddingRight="13dip"
