--- a/TwsPluginShareLib/res/values-v4/themes.xml
+++ b/TwsPluginShareLib/res/values-v4/themes.xml
@@ -1522,13 +1522,13 @@
         <item name="android:paddingBottom">13sp</item>
         <item name="android:paddingLeft">2sp</item>
         <item name="android:paddingRight">2sp</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/tws_Medium_TextSize</item>
         <item name="android:background">@null</item>
     </style>
 
     <style name="Widget.tws.EditText.NumberPickerInputText.Second">
-        <item name="android:textSize">18dp</item>
-        <item name="android:textColor">@color/tws_picker_selected_textcolor</item>
+        <item name="android:textSize">@dimen/tws_Larger_TextSize</item>
+        <item name="android:textColor">@color/tws_black</item>
         <item name="android:gravity">center</item>
         <item name="android:singleLine">true</item>
         <item name="android:paddingTop">0dp</item>
@@ -1536,6 +1536,7 @@
         <item name="android:paddingLeft">0dp</item>
         <item name="android:paddingRight">0dp</item>
         <item name="android:background">@null</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="Widget.tws.EditText.TwsEditTextStyle">
@@ -1657,7 +1658,7 @@
         <item name="minHeight">30dip</item>
         <item name="maxHeight">210dip</item>
         <item name="virtualButtonPressedDrawable">@null</item>
-        <item name="normalTextSize">14dp</item>
+        <item name="normalTextSize">@dimen/tws_Micro_TextSize</item>
         <item name="normalTextColor">@color/tws_picker_normal_textcolor</item>
     </style>
 
