--- a/TwsPluginDemo/res/layout/activity_transparent.xml
+++ b/TwsPluginDemo/res/layout/activity_transparent.xml
@@ -1,21 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#33a0F7e3"
-    tools:context=".WelcomeActivity">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 
-    <TextView
+    <Button
+        android:id="@+id/check_brand"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="25dp"
-        android:gravity="center"
-        android:layout_centerInParent="true"
-        android:background="#BBF7e3a0"
-        android:text="这个界面是全屏透明的" />
+        android:text="插件手机Build.BRAND" />
 
-</RelativeLayout>
+</LinearLayout>
